@@ -1,3 +1,8 @@
+Mon Aug 27 19:58:19 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* lib/pipeline.c (pipeline_wait): Return 1 if we fail to close the
+	  pipeline's output.
+
 Sun Aug 26 23:33:23 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* src/man.c (format_display): Check whether format_cmd is NULL
